syntax = "proto3";

package data.game_state;

import "google/api/annotations.proto";

import "data/game_state/game_state.proto";

service GameStateService {
    rpc Get(data.game_state.GetRequest) returns (data.game_state.GetResponse) {
        option (google.api.http) = {
            get: "/api/game_state"
        };
    }
}
