syntax = "proto3";

package data.teams;

import "data/teams/teams.proto";

service TeamsService {
    rpc List(data.teams.ListRequest) returns (data.teams.ListResponse);

    rpc CreateBatch(data.teams.CreateBatchRequest) returns (data.teams.CreateBatchResponse);
}
